--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.0",
+    "ethers": "^5.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "vite": "^2.3.8",
-    "ethers": "^5.4.4"
+    "vite": "^2.3.8"
   }
 }
